--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
       </nav>
     <main>
         <div class="row row1">
-            <div class="col-md .col-left  ml-sm-0 ml-md-0 mt-md-3 mt-sm-3">
+            <div class="col-md col-left  ml-sm-0 ml-md-0 mt-md-3 mt-sm-3">
                 <img class="grtimg" src="./Task-Keefer/gurantee_banner.gif" alt="">
 
             </div>
-            <div class="col-md frm .col-right pr-4 mt-md-3 mt-sm-3">
+            <div class="col-md frm col-right pr-4 mt-md-3 mt-sm-3">
                 <div class="row">
                 <span class="frmtxta col-xl"> <h2 class="bgmaroon">QUESTIONS!</h2></span>
                 <span class="frmtxtb col-xl">
